syntax = "proto3";

package post;


import "google/protobuf/timestamp.proto";

message Post {
  int32 id = 1;
  string title = 2;
  string content = 3;
  google.protobuf.Timestamp created_at = 4;

  enum Status {
    DRAFT = 0;
    PUBLISHED = 1;
    DELETED = 2;
  }
  Status status = 5;
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
}

message CreatePostResponse {
  Post post = 1;
}

message GetPostRequest {
  uint32 id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message GetPostsRequest {
  uint32 limit = 1;
  uint32 offset = 2;
}

message GetPostsResponse {
  repeated Post posts = 1;
}

service PostService {
  rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
  rpc GetPost (GetPostRequest) returns (GetPostResponse);
  rpc GetPosts (GetPostsRequest) returns (GetPostsResponse);
}
